# omnipyx

./: Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  translate.bat  translate.sh
omnipyx/: asgi.py  db.sqlite3  urls.py  wsgi.py
omnipyx/modules/: loader.py
omnipyx/settings/: base.py  dev.py  prod.py
omnipyx_core/: admin.py  apps.py  asgi.py  db_router.py  urls.py  wsgi.py
omnipyx_core/middlewares/: db_router_middleware.py  license_middleware.py
omnipyx_core/migrations/: 0001_initial.py  0002_license_accepted_terms_license_company_email_and_more.py
omnipyx_core/models/: license.py
omnipyx_core/modules/: loader.py
omnipyx_core/settings/: base.py  dev.py  prod.py
omnipyx_core/views/: setup.py
requirements/: base.txt  dev.txt
templates/: setup.html
