[project]
name = "omnipyx-core"
version = "0.1.0"
description = ""
authors = [
    {name = "diego1996",email = "diego.asencio.cuellar@unillanos.edu.co"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-filter (>=25.1,<26.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "django-mptt (>=0.17.0,<0.18.0)",
    "django-admin-interface (>=0.30.0,<0.31.0)",
    "django-colorfield (>=0.14.0,<0.15.0)",
    "django-money (>=3.5.4,<4.0.0)",
    "drf-spectacular[swagger-ui] (>=0.28.0,<0.29.0)",
    "omnipyx-crm @ file:///C:/Users/diego/Documents/omnipyx-crm",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
omnipyx-crm = {develop = true}
